fixes text wrap

--- a/src/App.scss
+++ b/src/App.scss
@@ -88,6 +88,7 @@ $breakpoint-mobile: 500px;
       h3 {
         margin-bottom:0px;
       }
+      word-break: break-all
     }
     .details-input {
       
